@@ -35,15 +35,11 @@ import org.apache.struts.action.ActionForward;
 import org.apache.struts.action.ActionMapping;
 import org.mifos.application.holiday.business.service.HolidayBusinessService;
 import org.mifos.application.holiday.persistence.HolidayDetails;
-import org.mifos.application.holiday.persistence.HolidayServiceFacadeWebTier;
 import org.mifos.application.holiday.persistence.OfficeHoliday;
 import org.mifos.application.holiday.struts.actionforms.HolidayActionForm;
 import org.mifos.application.holiday.util.helpers.HolidayConstants;
 import org.mifos.application.holiday.util.helpers.RepaymentRuleTypes;
 import org.mifos.application.util.helpers.ActionForwards;
-import org.mifos.customers.office.business.service.OfficeBusinessService;
-import org.mifos.customers.office.business.service.OfficeFacade;
-import org.mifos.customers.office.persistence.OfficePersistence;
 import org.mifos.framework.business.service.BusinessService;
 import org.mifos.framework.exceptions.ServiceException;
 import org.mifos.framework.struts.action.BaseAction;
@@ -54,7 +50,6 @@ import org.mifos.framework.util.helpers.SessionUtils;
 import org.mifos.framework.util.helpers.TransactionDemarcate;
 import org.mifos.security.util.ActionSecurity;
 import org.mifos.security.util.SecurityConstants;
-import org.mifos.security.util.UserContext;
 
 import edu.emory.mathcs.backport.java.util.Arrays;
 
@@ -66,7 +61,7 @@ public class HolidayAction extends BaseAction {
     }
 
     @Override
-    protected boolean skipActionFormToBusinessObjectConversion(String method) {
+    protected boolean skipActionFormToBusinessObjectConversion(@SuppressWarnings("unused") String method) {
         return true;
     }
 
@@ -114,20 +109,19 @@ public class HolidayAction extends BaseAction {
 
     @TransactionDemarcate(joinToken = true)
     public ActionForward preview(ActionMapping mapping, ActionForm form, HttpServletRequest request,
-            HttpServletResponse response) throws Exception {
+            @SuppressWarnings("unused") HttpServletResponse response) throws Exception {
         request.getSession().setAttribute(HolidayConstants.REPAYMENTRULETYPES, getRepaymentRuleTypes());
         String selectedOfficeIds = ((HolidayActionForm) form).getSelectedOfficeIds();
-        request.getSession().setAttribute(HolidayConstants.SELECTED_OFFICE_NAMES,
-                new OfficeFacade(new OfficeBusinessService()).topLevelOfficeNames(selectedOfficeIds));
+
+        final String topLevelOfficeNames = this.officeServiceFacade.topLevelOfficeNames(selectedOfficeIds);
+
+        request.getSession().setAttribute(HolidayConstants.SELECTED_OFFICE_NAMES, topLevelOfficeNames);
         return mapping.findForward(ActionForwards.preview_success.toString());
     }
 
     @TransactionDemarcate(joinToken = true)
-    public ActionForward previous(ActionMapping mapping, ActionForm form, HttpServletRequest request,
-            HttpServletResponse response) throws Exception {
-
-        UserContext userContext = (UserContext) SessionUtils.getAttribute(Constants.USER_CONTEXT_KEY, request
-                .getSession());
+    public ActionForward previous(ActionMapping mapping, @SuppressWarnings("unused") ActionForm form, HttpServletRequest request,
+            @SuppressWarnings("unused") HttpServletResponse response) throws Exception {
 
         request.getSession().setAttribute(HolidayConstants.REPAYMENTRULETYPES, getRepaymentRuleTypes());
 
@@ -141,11 +135,12 @@ public class HolidayAction extends BaseAction {
     }
 
     @TransactionDemarcate(saveToken = true)
-    public ActionForward get(ActionMapping mapping, ActionForm form, HttpServletRequest request,
-            HttpServletResponse response) throws Exception {
-        HolidayServiceFacadeWebTier holidayServiceFacade = new HolidayServiceFacadeWebTier(new OfficePersistence());
+    public ActionForward get(ActionMapping mapping, @SuppressWarnings("unused") ActionForm form, HttpServletRequest request,
+            @SuppressWarnings("unused") HttpServletResponse response) throws Exception {
+
         int count = 1;
         Map<String, List<OfficeHoliday>> holidaysByYear = holidayServiceFacade.holidaysByYear();
+
         Set<String> distinctYears = holidaysByYear.keySet();
         for (String year : distinctYears) {
             request.getSession().setAttribute(HolidayConstants.HOLIDAY_LIST + count, holidaysByYear.get(year));
@@ -166,8 +161,6 @@ public class HolidayAction extends BaseAction {
     public ActionForward managePreview(ActionMapping mapping, ActionForm form, HttpServletRequest request,
             HttpServletResponse response) throws Exception {
 
-        // HolidayActionForm holidayActionForm = (HolidayActionForm) form;
-
         return mapping.findForward(ActionForwards.managepreview_success.toString());
     }
 
@@ -177,22 +170,21 @@ public class HolidayAction extends BaseAction {
         return mapping.findForward(ActionForwards.manageprevious_success.toString());
     }
 
-    // @CloseSession
     @TransactionDemarcate(validateAndResetToken = true)
-    public ActionForward update(ActionMapping mapping, ActionForm form, HttpServletRequest request,
-            HttpServletResponse response) throws Exception {
+    public ActionForward update(ActionMapping mapping, ActionForm form, HttpServletRequest request, @SuppressWarnings("unused") HttpServletResponse response) throws Exception {
+
         HolidayActionForm holidayActionForm = (HolidayActionForm) form;
-        RepaymentRuleTypes repaymentRuleType = RepaymentRuleTypes.fromShort(new Short(holidayActionForm
-                .getRepaymentRuleId()));
-        HolidayDetails holidayDetails = new HolidayDetails(holidayActionForm.getHolidayName(), holidayActionForm
-                .getFromDate(), holidayActionForm.getThruDate(), repaymentRuleType);
+
+        RepaymentRuleTypes repaymentRuleType = RepaymentRuleTypes.fromShort(Short.valueOf(holidayActionForm.getRepaymentRuleId()));
+        HolidayDetails holidayDetails = assembleHolidayDetails(holidayActionForm, repaymentRuleType);
+
         List<Short> officeIds = new LinkedList<Short>();
-        String[] selectedOfficeIds = ((HolidayActionForm)form).getSelectedOfficeIds().split(",");
+        String[] selectedOfficeIds = holidayActionForm.getSelectedOfficeIds().split(",");
         for (String selectedOfficeId : selectedOfficeIds) {
-            officeIds.add(new Short(selectedOfficeId));
+            officeIds.add(Short.valueOf(selectedOfficeId));
         }
-        // TODO HolidayServiceFacadeWebTier and OfficePersistence to be injected
-        new HolidayServiceFacadeWebTier(new OfficePersistence()).createHoliday(holidayDetails, officeIds);
+
+        this.holidayServiceFacade.createHoliday(holidayDetails, officeIds);
 
         if (null != request.getParameter(Constants.CURRENTFLOWKEY)) {
             request.setAttribute(Constants.CURRENTFLOWKEY, request.getParameter("currentFlowKey"));
@@ -206,26 +198,31 @@ public class HolidayAction extends BaseAction {
         return mapping.findForward(ActionForwards.update_success.toString());
     }
 
+    private HolidayDetails assembleHolidayDetails(HolidayActionForm holidayActionForm,
+            RepaymentRuleTypes repaymentRuleType) {
+        return new HolidayDetails(holidayActionForm.getHolidayName(), holidayActionForm.getFromDate(), holidayActionForm.getThruDate(), repaymentRuleType);
+    }
+
     @TransactionDemarcate(validateAndResetToken = true)
-    public ActionForward cancelManage(ActionMapping mapping, ActionForm form, HttpServletRequest request,
-            HttpServletResponse response) throws Exception {
+    public ActionForward cancelManage(ActionMapping mapping, @SuppressWarnings("unused") ActionForm form, @SuppressWarnings("unused") HttpServletRequest request,
+            @SuppressWarnings("unused") HttpServletResponse response) throws Exception {
         return mapping.findForward(ActionForwards.cancelEdit_success.toString());
     }
 
     @TransactionDemarcate(joinToken = true)
-    public ActionForward validate(ActionMapping mapping, ActionForm form, HttpServletRequest request,
-            HttpServletResponse httpservletresponse) throws Exception {
+    public ActionForward validate(ActionMapping mapping, @SuppressWarnings("unused") ActionForm form, HttpServletRequest request,
+            @SuppressWarnings("unused") HttpServletResponse response) throws Exception {
 
         String method = (String) request.getAttribute("methodCalled");
         return mapping.findForward(method + "_failure");
     }
 
 
-    public ActionForward officeHierarchy(ActionMapping mapping, ActionForm form, HttpServletRequest request,
-            HttpServletResponse httpservletresponse) throws Exception {
-        httpservletresponse.setContentType("application/json");
-        PrintWriter out = httpservletresponse.getWriter();
-        out.println(new OfficeFacade(new OfficeBusinessService()).headOfficeHierarchy().toJSONString());
+    public ActionForward officeHierarchy(@SuppressWarnings("unused") ActionMapping mapping, @SuppressWarnings("unused") ActionForm form, @SuppressWarnings("unused") HttpServletRequest request,
+            HttpServletResponse response) throws Exception {
+        response.setContentType("application/json");
+        PrintWriter out = response.getWriter();
+        out.println(this.officeServiceFacade.headOfficeHierarchy().toJSONString());
         out.flush();
         return null;
     }
